Completed all tasks

--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-    "name": "tech-test",
-    "version": "1.0.0",
-    "scripts": {
-      "build:backend": "mvn -f backend/pom.xml clean compile",
-      "build:frontend": "pnpm --prefix frontend build", 
-      "build": "npm run build:backend && npm run build:frontend",
-      "run:backend": "mvn -f backend/pom.xml spring-boot:run",
-      "run:frontend": "pnpm --prefix frontend dev",
-      "start": "npm-run-all --parallel run:backend run:frontend",
-      "postinstall": "pnpm --prefix frontend install"
-    },
-    "devDependencies": {
-      "npm-run-all": "^4.1.5"
-    }
+  "name": "tech-test",
+  "version": "1.0.0",
+  "scripts": {
+    "build:backend": "mvn -f backend/pom.xml clean compile",
+    "build:frontend": "pnpm --prefix frontend build",
+    "build": "npm run build:backend && npm run build:frontend",
+    "run:backend": "mvn -f backend/pom.xml spring-boot:run",
+    "run:frontend": "pnpm --prefix frontend dev",
+    "start": "npm-run-all --parallel run:backend run:frontend",
+    "postinstall": "pnpm --prefix frontend install"
+  },
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  },
+  "dependencies": {
+    "zod": "^3.24.1"
   }
-  
+}
